# Kokkeak_API

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  _setup_m0_t01.py  _setup_m0_t03.py  _setup_m0_t04.py  _setup_m0_t05.py  deny.toml  docker-compose.override.yml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml  test_e2e.sh  test_e2e_m11.sh  test_e2e_m4_m7.sh  test_e2e_m8_m9.sh
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  security.yml
.zed/: debug.json  settings.json  tasks.json
certs/: .gitkeep  README.md
crates/api/: Cargo.toml
crates/api/src/: adapters.rs  cert_watcher.rs  error.rs  extractors.rs  files.rs  lib.rs  main.rs  openapi.rs  redirect.rs  repo_factory.rs  router.rs  signed_url.rs  state.rs  tls.rs
crates/api/src/handlers/: admin.rs  admin_order.rs  admin_order_service.rs  auth.rs  catalog.rs  category_job_main.rs  category_job_service_main.rs  category_job_service_sub.rs  category_job_service_sub_fee.rs  category_job_service_sub_warranty.rs  chat.rs  health.rs  master.rs  mod.rs  order.rs  payment.rs  permission.rs  user.rs  ws.rs
crates/api/src/middleware/: auth.rs  feature_gate.rs  i18n.rs  idempotency.rs  mod.rs  rate_limit_redis.rs  retry_count.rs  safety.rs  trace.rs
crates/api/tests/: integration_auth.rs  integration_chat_payment.rs  integration_i18n.rs  integration_idempotency.rs  integration_idempotency_routes.rs  integration_middleware.rs  integration_openapi.rs  integration_repo_factory.rs  rate_limit_redis.rs
crates/application/: Cargo.toml
crates/application/src/: admin_order_service.rs  admin_user.rs  audit.rs  auth.rs  catalog.rs  category_job_main.rs  category_job_service_main.rs  category_job_service_sub.rs  category_job_service_sub_fee.rs  category_job_service_sub_warranty.rs  chat.rs  lib.rs  master.rs  order.rs  payment.rs  permission.rs  rate_limit.rs  user.rs  user_role.rs
crates/common/: Cargo.toml
crates/common/locales/: en.yml  lo.yml  th.yml  zh.yml
crates/common/src/: config.rs  error.rs  error_codes.rs  i18n.rs  lib.rs  response.rs  telemetry.rs
crates/common/src/locales/: en.yml  lo.yml  th.yml
crates/domain/: Cargo.toml
crates/domain/benches/: matching.rs
crates/domain/src/: admin_order_service.rs  admin_user.rs  auth.rs  cache.rs  catalog.rs  category_job_main.rs  category_job_service_main.rs  category_job_service_sub.rs  category_job_service_sub_fee.rs  category_job_service_sub_warranty.rs  chat.rs  circuit_breaker.rs  error.rs  health.rs  idempotency.rs  lib.rs  master.rs  matching.rs  order.rs  pagination.rs  payment.rs  permission.rs  permission_serde_probe.rs  queue.rs  storage.rs  traits.rs  user.rs
crates/domain/src/traits/: admin_order_service.rs  catalog.rs  category_job_main.rs  category_job_service_main.rs  category_job_service_sub.rs  category_job_service_sub_fee.rs  category_job_service_sub_warranty.rs  chat.rs  master.rs  order.rs  payment.rs  permission.rs  translation.rs  user.rs  user_role.rs
crates/infra/: Cargo.toml
crates/infra/benches/: auth.rs
crates/infra/src/: audit.rs  circuit_breaker.rs  idempotency.rs  image_processor.rs  lib.rs  permission_checker.rs
crates/infra/src/auth/: jwt.rs  mod.rs  password.rs  rate_limit.rs  session_store.rs
crates/infra/src/cache/: layer.rs  mod.rs  permission_cache.rs  redis.rs  translation_cache.rs
crates/infra/src/db/: json.rs  json_catalog.rs  json_chat.rs  json_order.rs  json_payment.rs  json_translation.rs  json_user.rs  migrate.rs  mod.rs  mongo.rs  mongo_chat.rs  mssql.rs  mssql_admin_order_service.rs  mssql_catalog.rs  mssql_category_job_main.rs  mssql_category_job_service_main.rs  mssql_category_job_service_sub.rs  mssql_category_job_service_sub_fee.rs  mssql_category_job_service_sub_warranty.rs  mssql_chat.rs  mssql_master.rs  mssql_order.rs  mssql_payment.rs  mssql_permission.rs  mssql_permission_user.rs  mssql_translation.rs  mssql_user.rs  mssql_user_role.rs  topology.rs
crates/infra/src/health/: mod.rs  mongo.rs  nats.rs  redis.rs  sqlserver.rs
crates/infra/src/pubsub/: mod.rs  redis_chat.rs
crates/infra/src/queue/: mod.rs  nats.rs
crates/infra/src/storage/: keys.rs  local.rs  memory.rs  mod.rs  s3.rs
crates/infra/tests/: integration_permission_sqlserver.rs  integration_user_sqlserver.rs
crates/worker/: Cargo.toml
crates/worker/src/: idempotency.rs  lib.rs  main.rs  retry.rs  runner.rs
crates/worker/src/handlers/: chat_persist.rs  comm_email.rs  mod.rs  noti_push.rs  order_dispatch.rs  points_recalc.rs
deploy/helm/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/helm/templates/: _helpers.tpl  api-deployment.yaml  api-service.yaml  certificate.yaml  configmap.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  serviceaccount.yaml  worker-deployment.yaml
deploy/observability/: README.md  slo.md
deploy/observability/grafana/: kokkak-api-dashboard.json
deploy/observability/prometheus/: alerts.yml
docs/: HTTPS_DEPLOYMENT.md  SECRETS.md
migrations/: 20260619000001_create_user_rbac_foundation.sql  20260619000002_seed_user_roles.sql  20260620000001_sp_user.sql  20260620000002_sp_service.sql  20260620000003_sp_order.sql  20260620000004_sp_chat.sql  20260620000005_sp_payment.sql  20260620000006_sp_translation.sql  20260620000007_sp_user_role.sql  20260626000001_sp_permission_user.sql  20260627000001_sp_permission_user_override_update.sql  20260628000001_sp_caller_user_guid.sql  20260629000001_sp_master_country_dropdown.sql  20260630000001_sp_user_find_by_id.sql  20260701000001_sp_autocomplete_user_department.sql  20260701000002_sp_permission_has_permission_wrapper.sql  20260708000001_rename_permission_codes_to_service.sql  SP_CATEGORY_JOB_SERVICE_SUB_FEE_UPDATE_v2.sql
scripts/: dev-run.ps1  dev-stop.ps1  dev-tls-setup.ps1  prod-run.ps1  publish-prod.ps1  redis_check_cache.py  strip_comments.py  web.config
scripts/load/: README.md  create_order.js  login.js  seed.json
