[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/domain",
    "crates/application",
    "crates/infra",
    "crates/api",
    "crates/worker",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "Proprietary"
authors = ["Kokkeak Team"]
description = "Kokkeak Backend API — handyman/technician marketplace (Laos)"


[workspace.lints.rust]
missing_docs = "allow"


[workspace.dependencies]

tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"


axum = { version = "0.7", features = ["macros", "ws"] }




tower = { version = "0.5", features = ["util"] }






tower-http = { version = "0.6", features = ["trace", "cors", "compression-br", "compression-deflate", "compression-gzip", "timeout", "set-header", "limit", "fs"] }
hyper = "1"


serde = { version = "1", features = ["derive"] }
serde_json = "1"


thiserror = "1"
anyhow = "1"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }




opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", default-features = false, features = ["grpc-tonic", "trace", "metrics"] }
tracing-opentelemetry = "0.28"


metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }


figment = { version = "0.10", features = ["env", "toml"] }


chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }


rust_decimal = { version = "1.36", features = ["serde-with-str"] }
rust_decimal_macros = "1.36"


validator = { version = "0.18", features = ["derive"] }






image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webp   = "0.3"





base64 = "0.22"







hmac = "0.12"
sha2 = "0.10"


argon2 = { version = "0.5", default-features = false, features = ["std"] }
jsonwebtoken = "9"





once_cell = "1"













axum-server = { version = "0.7", features = ["tls-rustls"] }





rustls = { version = "0.23", default-features = false, features = ["logging", "std", "ring"] }
rustls-pemfile = "2"






tower_governor = "0.4"






notify = "6"






utoipa = "4"
utoipa-swagger-ui = "7"


redis = { version = "0.27", default-features = false, features = ["tokio-comp", "aio", "script"] }
deadpool-redis = "0.18"


moka = { version = "0.12", features = ["future"] }


async-nats = "0.42"


mongodb = "3.2"
bson = { version = "2.13", features = ["chrono-0_4"] }


subtle = "2"


criterion = { version = "0.5", features = ["html_reports"] }


[profile.dev]
opt-level = 0
debug = true
incremental = false
overflow-checks = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true




panic = "abort"
