[package]
name = "kokkak-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP API server (axum) — entry point for web/admin/mobile clients"

[[bin]]
name = "kokkak-api"
path = "src/main.rs"

[dependencies]
# Core
tokio = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }

# Telemetry
tracing = { workspace = true }
metrics = { workspace = true }

# M2: JWT decoding in extractor
jsonwebtoken = { workspace = true }

# Internal
kokkak-common = { path = "../common" }
kokkak-domain = { path = "../domain" }
kokkak-infra = { path = "../infra" }
kokkak-application = { path = "../application" }

# M8: WebSocket gateway (axum::extract::ws) + per-connection
# future plumbing.
futures = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# Validation
validator = { workspace = true }

# M10 repo_factory
thiserror = { workspace = true }

# M_dev: auto-load `.env` so `KOKKAK_AUTH__JWT_SECRET=...` and friends
# work without the operator having to `export` each one before
# `cargo run`. figment 0.10's `Env` provider reads only from process
# env (not from a file), so we use dotenvy to bridge. `.ok()` makes
# the call a no-op in production where no `.env` exists.
dotenvy = "0.15"

[dev-dependencies]
# Test body / JSON inspection in handler tests.
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
