[package]
name = "kokkak-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "HTTP API server (axum) — entry point for web/admin/mobile clients"

[[bin]]
name = "kokkak-api"
path = "src/main.rs"

[dependencies]

tokio = { workspace = true }
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rust_decimal = { workspace = true }


tracing = { workspace = true }
metrics = { workspace = true }


jsonwebtoken = { workspace = true }


kokkak-common = { path = "../common" }


kokkak-domain = { path = "../domain", features = ["openapi"] }
kokkak-infra = { path = "../infra" }
kokkak-application = { path = "../application" }



futures = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }


validator = { workspace = true }





base64 = { workspace = true }




bytes = "1"


hmac = { workspace = true }
sha2  = { workspace = true }


thiserror = { workspace = true }






dotenvy = "0.15"




axum-server = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
anyhow = { workspace = true }


notify = { workspace = true }


tower_governor = { workspace = true }





redis = { workspace = true }
deadpool-redis = { workspace = true }


utoipa = { workspace = true, features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

[dev-dependencies]

serde_yaml = "0.9"

serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }


http-body-util = "0.1"
