[package]
name = "kokkak-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Use cases: orchestrate domain + repo traits (1 action = 1 use case)"

[dependencies]

tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }




kokkak-domain = { path = "../domain" }
kokkak-common = { path = "../common" }


thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }


validator = { workspace = true }


tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]


kokkak-infra = { path = "../infra" }
