[package]
name = "kokkak-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Common utilities: error, config, telemetry, response envelope"

[dependencies]
serde = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }


axum = { workspace = true }


tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }


rust-i18n = "3"






opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }






kokkak-domain = { path = "../domain" }

[features]



otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
serde_json = { workspace = true }
