[package]
name = "kokkak-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain entities, value objects, business rules, traits (no framework/DB)"

[dependencies]
# Ports (traits) + their typed errors
async-trait = { workspace = true }
thiserror = { workspace = true }

# Pure utility crate (no runtime); used for `future::join_all` to
# run health checks concurrently. Allowed in `domain` because it is
# a combinator library, not an IO/runtime.
futures = { workspace = true }

# Bytes payload for queue messages (no runtime, no IO).
bytes = "1"

# Entities are serializable so adapters can persist them; serde has
# no IO / runtime cost so it stays in domain.
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Trait-level dependency for the auth-related typed errors
# (jsonwebtoken is only used in adapters; we keep it out of domain).

# Opaque cursor codec (no IO, no runtime).
base64 = "0.22"

# Decimal macro for the payment commission tests (no IO, no runtime).
rust_decimal_macros = { workspace = true }

# T-16: OpenAPI spec generation. Optional feature so domain
# stays utoipa-free for callers who don't need the spec
# (mobile team / Swagger UI consumers). The derive is
# cfg-gated on every entity to keep zero-cost when disabled.
utoipa = { workspace = true, optional = true, features = ["chrono", "uuid", "decimal"] }

[features]
default = []
# Enable OpenAPI `ToSchema` derives on the entities so they
# appear in the mobile-facing spec at /api/docs.
openapi = ["dep:utoipa"]

[dev-dependencies]
# Test runtime only — kept out of `[dependencies]` to keep `domain`
# runtime-pure (AGENTS.md § 6).
tokio = { workspace = true, features = ["macros", "rt"] }
# T-16: dev builds that exercise the OpenAPI derives need the
# optional dep materialized.
utoipa = { workspace = true, features = ["chrono", "uuid", "decimal"] }
# T-27: Criterion bench harness (only used by `benches/`).
criterion = { workspace = true }

[[bench]]
name = "matching"
harness = false
