[package]
name = "kokkak-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Domain entities, value objects, business rules, traits (no framework/DB)"

[dependencies]

async-trait = { workspace = true }
thiserror = { workspace = true }




futures = { workspace = true }


bytes = "1"



serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }





base64 = "0.22"


rust_decimal_macros = { workspace = true }





utoipa = { workspace = true, optional = true, features = ["chrono", "uuid", "decimal"] }

[features]
default = []


openapi = ["dep:utoipa"]

[dev-dependencies]


tokio = { workspace = true, features = ["macros", "rt"] }


utoipa = { workspace = true, features = ["chrono", "uuid", "decimal"] }

criterion = { workspace = true }

[[bench]]
name = "matching"
harness = false
