[package]
name = "kokkak-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Adapters: tiberius (SQL Server), mongodb, redis, nats, fcm, S3"

[dependencies]

kokkak-common = { path = "../common" }
kokkak-domain = { path = "../domain" }
kokkak-application = { path = "../application" }


tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }


thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


tracing = { workspace = true }
metrics = { workspace = true }


chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }



tiberius = { version = "0.12", default-features = false, features = ["chrono", "rust_decimal", "tokio", "tokio-rustls", "rustls"] }
bb8 = "0.8"
bb8-tiberius = "0.14"


redis = { workspace = true }
deadpool-redis = { workspace = true }


moka = { workspace = true }
once_cell = { workspace = true }


async-nats = { workspace = true }
bytes = "1"


mongodb = { workspace = true }
bson = { workspace = true }


argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
subtle = { workspace = true }


sha2 = "0.10"
rust-s3 = { version = "0.33", default-features = false, features = ["tokio-rustls-tls"] }




image = { workspace = true }
webp   = { workspace = true }





[dev-dependencies]
criterion = { workspace = true }
base64 = { workspace = true }

[[bench]]
name = "auth"
harness = false
