[package]
name = "kokkak-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "NATS consumer — background jobs (push, email, pdf, points, dispatch)"

[[bin]]
name = "kokkak-worker"
path = "src/main.rs"

[dependencies]


kokkak-common = { path = "../common" }
kokkak-domain = { path = "../domain" }
kokkak-application = { path = "../application" }
kokkak-infra = { path = "../infra" }


tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }


thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


chrono = { workspace = true }
uuid = { workspace = true }


tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
metrics = { workspace = true }


async-nats = { workspace = true }
bytes = "1"



redis = { workspace = true }
deadpool-redis = { workspace = true }


mongodb = { workspace = true }
bson = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }
uuid = { workspace = true }
serde_json = { workspace = true }
